--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <!-- Font -->
+    <title>CV</title>
     <style>@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');</style>
-    <!-- Icon -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <!-- CSS 'reset' -->
     <link rel="stylesheet" href="./Assets/css/Normalize.css">
-
     <link rel="stylesheet" href="./Assets/css/Style.css">
 </head>
 
