--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>CV</title>
     <style>@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');</style>
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="./Assets/css/Normalize.css">
-    <link rel="stylesheet" href="./Assets/css/Style.css">
+    <link rel="stylesheet" href="./assets/css/Normalize.css">
+    <link rel="stylesheet" href="./assets/css/Style.css">
 </head>
 
 <body right style="--order:0;">
@@ -143,4 +143,5 @@
         </div>
     </div>
 </body>
+
 </html>
